# kakasi

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dict_format.md  rust_article_romaji.txt
.github/workflows/: cd.yml  ci.yml
benches/: kakasi_benchmark.rs  perf.rs
codegen/: Cargo.toml
codegen/dict/: hepburn.utf8  itaijidict.utf8  kakasidict.utf8
codegen/src/: main.rs  phfbin_gen.rs  testconv.rs
dict/: Cargo.toml
src/: hepburn_dict.rs  lib.rs  main.rs  phfbin.rs  syn_dict.rs  types.rs  util.rs
tests/: rust_article.txt  rust_article_hiragana.txt  rust_article_romaji.txt  tests.rs
