[package]
name = "kakasi"
version = "0.1.0"
edition = "2021"
authors = ["ThetaDev"]
license = "GPL-3.0"
description = "Romanize hiragana, katakana and kanji (Japanese text)"

include = ["/src", "README.md", "LICENSE"]

[workspace]
members = [".", "codegen"]

[dependencies]
byteorder = "1.4.3"
phf = {version = "0.11.1", features = ["macros"]}
phf_shared = "0.11.1"
unicode-normalization = "0.1.22"
wana_kana = "2.1.0"

[dev-dependencies]
rstest = { version = "0.15.0", default-features = false }

[profile.release]
# These settings optimize for size
codegen-units = 1
opt-level = 'z'
lto = true
