[package]
name = "kakasi"
version = "0.1.0"
edition = "2021"
authors = ["ThetaDev"]
license = "GPL-3.0"
description = "Romanize hiragana, katakana and kanji (Japanese text)"

include = ["/src", "README.md", "LICENSE"]

[workspace]
members = [".", "codegen"]

[dependencies]
byteorder = "1.4.3"
phf = {version = "0.11.1", features = ["macros"]}
phf_shared = "0.11.1"
unicode-normalization = "0.1.22"

[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.11.0", features = ["flamegraph"] }
rstest = { version = "0.15.0", default-features = false }

[[bench]]
name = "kakasi_benchmark"
harness = false

[profile.release]
codegen-units = 1
lto = true
