[package]
name = "kakasi-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.16.0"
byteorder = "1.4.3"
regex = "1.7.0"
phf = {version = "0.11.1", features = ["macros"]}
phf_shared = "0.11.0"
phf_generator = "0.11.0"
phf_codegen = "0.11.1"
unicode-normalization = "0.1.22"
wana_kana = "2.1.0"

[dev-dependencies]
rstest = { version = "0.15.0", default-features = false }
